...
                      onPressed: () {
                        if(selectedWorkouts.isNotEmpty)
                        {
                          AppNavigator.goToWorkoutScreen(context,null);
                        }
                      },
                      text: "Continue",
                    ),
                  ),
                ),
              ),
            ],
            iconTheme: const IconThemeData(color: accentColor),
...
                            crossAxisAlignment: WrapCrossAlignment.start,
                            runAlignment: WrapAlignment.start,
                            children:   [
                              WorkoutListItem(
                                workout: Workout(
                                    sets: [WorkoutSet(number: "1",id: "benchpress1")],
                                    title: "Bench Press",
                                    level: "Beginner",
                                    imagePath: "assets/images/bench_press.jpg",
                                    muscleGroup: "Chest, Triceps and Core"),
                              ),
                              WorkoutListItem(
                                workout: Workout(
...
