...
                                BorderedButton(
                                    borderColor: Colors.red,
                                    text: "Cancel", onPressed: (){
                                  Navigator.pop(context);
                                }),
                                BorderedButton(
                                    text: "Save Workout", onPressed: ()async{
                                      late Session currentSession;
                                      if(session!=null)
                                        {
                                          print("Session is not null");
                                          currentSession = session!.copyWith(date:session!.date, workouts: ref.read(selectedWorkoutsListProvider));
                                        }else{
...
                              ],
                              title: const Text("Are you sure you want to End your workout?",style: titleMedium,),
                              content: const Text("You will be able to edit your saved workout from you workouts screen.",style: subtitle,),
                            ));
                          }
                      },
                      text: session!=null?"Save":"End",
                    ),
                  ),
                ),
              ),
            ],
          ),
...
