...
                          curve: Curves.ease,
                          index: setsList.length-4,
                          duration: const Duration(milliseconds: 600));
                    }
                  },
                  child: const Text(
                    "Add Set",
                    style: buttonTextStyle,
                  ),
                ),
              ),
            ],
          ),
...
